--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Profile Page</title>
 </head>
 <body>
-    <div class="card">
-      <div class="top-half"></div>
-      <div class="bottom-half"></div>
-      <h1>Username<h1>
-      <h2>Bio<h2>
-      <h3>Experience<h3>
-      <h4>Hobbies<h4>
-      <h5>Portfolio<h5>
-    </div>
-    <div class="circle">
-      <div class="cross"></div>
-     
+  <div class="card">
+    <div class="top-half"></div>
+    <div class="bottom-half"></div>
+    <h1>Username<h1>
+    <h2>Bio<h2>
+    <h3>Experience<h3>
+    <h4>Hobbies<h4>
+    <h5>Portfolio<h5>
+  </div>
+  <div class="circle">
+    
+    <div class="square"></div>
+
+   
 </div>
 </body>
 </html>
